--- a/Css/index.css
+++ b/Css/index.css
@@ -53,6 +53,8 @@ section{
 
 
 footer{
+    margin-top: .5vw;
+    padding-bottom: .5vw;
     text-align: center;
     background-color: gray;
     padding: .5 rem;
