--- a/Css/index.css
+++ b/Css/index.css
@@ -53,12 +53,14 @@ section{
 
 
 footer{
-    margin-top: .5vw;
-    padding-bottom: .5vw;
     text-align: center;
     background-color: gray;
-    padding: .5 rem;
-    color: #000;
+    padding: .5rem;
+    color: #000
+}
+
+footer p {
+    padding: 1rem;
 }
 
 @media only screen and (max-width: 650px) {
