--- a/Css/index.css
+++ b/Css/index.css
@@ -2,32 +2,37 @@
     margin: 0%;
 }
 
-header{
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+header {
     background-color: rgb(63, 47, 78);
     text-align: center;
     padding: 2vh;    
     text-shadow: 2px 2px 2px purple;
 }
 
-header a{
+header a {
     text-decoration: none;
     color: #000;
 }
 
-main{
-    height: 100vh; /* Changed from auto to 100vh for desktop */
-    max-height: fit-content;
+main {
+    flex: 1; /* Allow main to take up remaining space */
     background-color: gray;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-row: 1fr;
     grid-template-areas: 
-    "section aside"
-    ;
-    
+    "section aside";
 }
 
-aside{
+aside {
     grid-area: aside;
     background-color: #000;
     color: white;
@@ -38,7 +43,7 @@ aside{
     box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
 }
 
-section{
+section {
     grid-area: section;
     background-color: #000;
     color: white;
@@ -49,11 +54,11 @@ section{
     box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
 }
 
-footer{
+footer {
     text-align: center;
     background-color: gray;
     padding: 2rem 0.5rem; /* Added top padding to ensure footer is not covered */
-    color: #000
+    color: #000;
 }
 
 footer p {
@@ -101,13 +106,11 @@ footer p {
 }
 
 @media only screen and (max-width: 650px) {
-    main{
+    main {
         grid-template-columns: auto;
         grid-template-rows: auto auto;
         grid-template-areas: 
         "aside"
-        "section"
-        ;
+        "section";
     }
-
 }
