--- a/Css/index.css
+++ b/Css/index.css
@@ -54,6 +54,10 @@ section {
     box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
 }
 
+section article h2 {
+    background-color: rgb(120, 28, 206);
+}
+
 footer {
     text-align: center;
     background-color: gray;
