--- a/Css/index.css
+++ b/Css/index.css
@@ -15,7 +15,7 @@ header {
     background-color: rgb(63, 47, 78);
     text-align: center;
     padding: 2vh;    
-    text-shadow: 2px 2px 2px purple;
+    text-shadow: 2px 2px 2px gray;
 }
 
 header a {
@@ -52,11 +52,6 @@ section {
     border-radius: 1vw;
     word-wrap: break-word;
     box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
-}
-
-section article h2 {
-    background-color: rgb(130, 70, 185);
-    
 }
 
 footer {
