--- a/Css/index.css
+++ b/Css/index.css
@@ -1,5 +1,6 @@
 * {
     margin: 0%;
+    font-size: 1.5vw;
 }
 
 html, body {
@@ -54,6 +55,10 @@ section {
     box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
 }
 
+section article {
+    margin: 2vw;
+}
+
 footer {
     text-align: center;
     background-color: gray;
@@ -62,7 +67,7 @@ footer {
 }
 
 footer p {
-    margin: .5vw;
+    margin: .3vw;
 }
 
 @media only screen and (max-width: 1024px) {
