--- a/Css/blog.css
+++ b/Css/blog.css
@@ -2,7 +2,6 @@
     margin: 0%;
 }
 
-
 .Socials ul{
     list-style-type: none;
     padding: 5%;
@@ -10,7 +9,6 @@
 
 .Socials a{
     text-decoration: none;
-    
     color: white;
 }
 
@@ -29,7 +27,6 @@ main{
     grid-template-areas: 
     "section aside"
     ;
-    
 }
 
 aside{
@@ -52,6 +49,52 @@ section{
     border-radius: 1vw;
     word-wrap: break-word;
     box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
+}
+
+details{
+    background-color: rgb(60, 60, 60);
+    color: white;
+    padding: 1vw;
+    margin: 1vw;
+    border-radius: 1vw;
+    word-wrap: break-word;
+    box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
+    user-select: none;
+}
+details[open] {
+    background-color: rgb(60, 60, 60);
+    color: white;
+    padding: 1vw;
+    margin: 1vw;
+    border-radius: 1vw;
+    word-wrap: break-word;
+    box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
+}
+summary {
+    cursor: pointer;
+    font-weight: 600;
+    display: flex;
+    list-style: none;
+    padding: 1em;
+    justify-content: center;
+}
+
+
+aside{
+    text-decoration: none;
+    color: white;
+}
+
+details a{
+    padding: 1vw;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+} 
+a:hover {
+    color: blueviolet;
 }
 
 footer{
@@ -77,27 +120,6 @@ footer{
 
     aside{
         grid-area: aside;
-        background-color: #000;
-        color: white;
-        padding: 1vw;
-        margin: 1vw;
-        border-radius: 1vw;
-        word-wrap: break-word;
-        box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
-    }
-
-    section{
-        grid-area: section;
-        background-color: #000;
-        color: white;
-        padding: 1vw;
-        margin: 1vw;
-        border-radius: 1vw;
-        word-wrap: break-word;
-        box-shadow: 0px 5px 5px 5px rgb(36, 36, 37);
-    }
-    aside{
-        grid-area: aside;
     }
     section{
         grid-area: section;
@@ -113,5 +135,5 @@ footer{
     }
     footer{
         padding: 1vh;
-    }
-}   
+    }   
+}
