--- a/Css/nav.css
+++ b/Css/nav.css
@@ -33,6 +33,12 @@ nav {
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
   }
   /* The sidepanel links */
+
+.sidepanel ul {
+    list-style-type: none; /* Remove bullets */
+    font-size: 25px;
+    color: #818181;
+  }
   .sidepanel a {
     text-decoration: none;
     font-size: 25px;
@@ -65,4 +71,25 @@ nav {
 .openbtn:hover {
     background-color: rgb(36, 8, 219);
     border-radius: 20px 40px;
+}
+
+@media only screen and (max-width: 650px) {
+  .sidepanel a {
+      text-align: center; /* Center-align the text in the sidepanel */
+      font-size: 8vw; /* Adjust font size for better readability */
+  }
+
+  .openbtn {
+      font-size: 4vw; /* Reduce button size */
+      padding: 1.5vw 2vw; /* Adjust padding */
+  }
+
+  .sidepanel .closebtn { 
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 10vw;
+    margin-left: 20px;
+  }
+
 }
