--- a/Css/index.css
+++ b/Css/index.css
@@ -20,7 +20,7 @@
 
 
 main{
-    max-height: fit-content;
+    min-height: 100vh;
     background-color: gray;
     display: grid;
     grid-template-columns: 2fr 1fr;
