--- a/Css/Blog_template.css
+++ b/Css/Blog_template.css
@@ -18,8 +18,7 @@
 
 
 main{
-    height: 100vh;
-    max-height: fit-content;
+    min-height: 100vh;
     background-color: gray;
     display: grid;
     grid-template-columns: 2fr 1fr;
