--- a/Css/test_page.css
+++ b/Css/test_page.css
@@ -20,8 +20,7 @@
 
 
 main{
-    height: 100vh;
-    max-height: fit-content;
+    min-height: 100vh;
     background-color: gray;
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -29,7 +28,6 @@ main{
     grid-template-areas: 
     "section aside"
     ;
-    
 }
 
 aside{
